Integrated stuff from static/isaacs into the main app. Hooked Simile up to the map pins, and created the Timeline class to wrap Simile. Removed isaacs folder because it is no longer needed.

--- a/static/styles/timemap.less
+++ b/static/styles/timemap.less
@@ -30,11 +30,12 @@ body {
 	left: 0;
 	z-index: 1000;
 	background-color: @pageBackground;
+	overflow: hidden;
   	.x-box-shadow(0px, 2px, 4px, 0px, rgba(0,0,0,0.2));
 
   	.logo {
   		@logoMargin: 10px;
-  		height: @topBarHeight - (2 * @logoMargin);
+  		height: 40px;
   		margin: @logoMargin;
   		display: table-cell;
   		text-align: center;
@@ -42,6 +43,16 @@ body {
   		font-size: 20px;
   	}
 }
+
+#timeline {
+	height: 80px;
+	border-top: 1px solid #aaa;
+
+	.timeline-copyright {
+		display: none;
+	}
+}
+
 
 #tm-sidebar {
 
@@ -254,7 +265,7 @@ body {
 .tm-branch-info {
 	@infoWidth: 350px;
 	@infoHeight: 230px;
-	@infoRadius: 7px;
+	@infoRadius: 4px;
 	width: @infoWidth;
 	height: @infoHeight;
 	margin: -(@infoHeight + 50) 0 0 -(@infoWidth / 2);
@@ -276,8 +287,11 @@ body {
 		padding: 5px;
 		position: relative;
 		background-color: @titleBackground;
+		overflow: hidden;
+		border-bottom: solid 1px rgb(240, 240, 240);
 		.x-border-top-left-radius(@infoRadius);
 		.x-border-top-right-radius(@infoRadius);
+		.x-box-shadow(0, 1px, 0, 0, rgba(0,0,0,0.2));
 
 		.close {
 			@closePadding: 5px;
@@ -289,7 +303,7 @@ body {
 			position: absolute;
 			top: 0;
 			right: 0;
-			.x-border-top-right-radius(@infoRadius);
+			.x-border-top-right-radius(@infoRadius - 1);
 			cursor: pointer;
 
 			&:hover {
@@ -312,5 +326,5 @@ body {
 
 @pageBackground: white;
 @sidebarWidth: 350px; //Also change in Environment
-@topBarHeight: 60px; //Also change in Environment
+@topBarHeight: 139px; //Also change in Environment
 @font: Arial;
